--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
-.App {
-  text-align: center;
+/* App.css */
+.sidebar {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  padding-top: 20px;
+  font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.sidebar a {
+  padding: 8px 8px 8px 16px;
+  text-decoration: none;
+  font-size: 18px;
   color: white;
+  display: block;
 }
 
-.App-link {
-  color: #61dafb;
+/* .sidebar a:hover {
+  background-color: #ddd;
+  color: black;
+} */
+
+.dropdown, .sub-dropdown, .sub1-dropdown, .sub2-dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropbtn {
+  background-color: inherit;
+  color: white;
+  padding: 8px 16px;
+  font-size: 18px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: powderblue;
+  /* color: black !important; */
+  min-width: 180px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+.sub-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: pink;
+  /* color: black !important; */
+  min-width: 180px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.sub-dropdown:hover .sub-dropdown-content {
+  display: block;
+}
+
+.sub1-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: tan;
+  /* color: black !important; */
+  min-width: 180px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.sub1-dropdown:hover .sub2-dropdown-content {
+  display: block;
+}
+
+.sub2-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: teal;
+  /* color: black !important; */
+  min-width: 180px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.sub3-dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: palegreen;
+  /* color: black !important; */
+  min-width: 180px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+
+.sub2-dropdown:hover .sub3-dropdown-content {
+  display: block;
+}
+
+/* App.css */
+.search-bar {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ddd;
+  background-color: #f5f5f5;
+}
+
+.search-bar input {
+  padding: 8px;
+  border: none;
+  border-radius: 5px;
+  width: 70%;
+  background-color: #e0e0e0;
+  color: #333;
+  font-size: 16px;
+  outline: none;
+}
+
+.search-bar button {
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 15px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.search-bar button:hover {
+  background-color: #0056b3;
 }
